<?xml version="1.0"?>
<package>
  <name>yaml_cpp_catkin</name>
  <version>1.0.0</version>
  <description>Package for generating python bindings</description>
  <maintainer email="mnaveau@tue.mpg.de">Movement Control and Generation Group - MPI-IS</maintainer>
  <license>BSD 3-Clause</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <export>
  </export>
</package>
