<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>yaml_utils</name>
    <version>1.0.0</version>
    
    <description>
        This pacakge provide modern cmake access to yaml_cpp and provide Eigen3
        support.
    </description>

    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

    <license>BSD 3-clause</license>

    <!-- ROS2 build -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <depend>mpi_cmake_modules</depend>
    
    <!-- Unit tests -->
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
