<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>yaml_utils</name>
    <version>1.0.0</version>
    
    <description>
        This package provide modern cmake access to yaml_cpp and provide Eigen3
        support.
    </description>

    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>cmake</buildtool_depend>

    <depend>yaml-cpp</depend>
    <depend>Eigen3</depend>

    <!-- Unit tests -->
    <test_depend>googletest-distribution</test_depend>
    <test_depend>GTest</test_depend>
</package>
